# otaku-watcher

./: LICENSE  Makefile  README.md  pyproject.toml
mov_cli_anime/: __init__.py
otaku_watcher/: __init__.py  anitaku.py  tokyo_insider.py
otaku_watcher/anitaku/: scraper.py
